<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.elimatsim.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_reflow" />

    <fragment
        android:id="@+id/nav_farmers"
        android:name="com.example.elimatsim.ui.farmers.FarmersFragment"
        android:label="@string/menu_farmers"
        tools:layout="@layout/fragment_transform" />

    <fragment
        android:id="@+id/nav_transactions"
        android:name="com.example.elimatsim.ui.transactions.TransactionsFragment"
        android:label="@string/menu_transactions"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.elimatsim.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>